# LazySignal

./: .gitignore  README.md  demo.py  main.py  pyproject.toml  requirements.txt
lazysignal/: __init__.py  core.py
tests/: test_signals_basic.py
