[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazysignals"
version = "0.1.0"
description = "LazySignals is a tiny, dependency-free signal / pub-sub library for Python."
authors = [
  { name = "Lennart Wijers" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[tool.setuptools]
packages = ["lazysignal"]
